--- a/trailblazers-react/src/CharacterListDashboard/CharacterPageList.css
+++ b/trailblazers-react/src/CharacterListDashboard/CharacterPageList.css
@@ -1,4 +1,3 @@
-
 .headerbar{
     position: absolute;
     top: 0%;
@@ -10,6 +9,52 @@
     padding-left: 0px;
 }
 
-li{
+ul{
+    list-style-type: none;
+}
+
+li[data-id = 'header']{
     display: inline-block;
+}
+
+.contents{
+    position: relative;
+    top: 80px;
+    padding: 30px 30px 0px 30px;
+    background-color: rgba(27, 26, 26, 0.337);
+    min-height: 300px;
+    margin-left: 2%;
+    margin-right: 3%;
+    margin-bottom: 6%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; /* Adjust the number of columns as needed */
+    grid-gap: 50px; /* Adjust the gap between items as needed */
+    grid-row-gap: 0px; /* Specify the gap size between rows */
+    justify-content: center;
+    border-radius: 7px;
+}
+
+.character-portrait{
+    color: rgb(220, 214, 214);
+    font-family: "Open Sans", Arial, sans-serif;
+    text-align: center;
+    transition: transform 0.3s, filter 0.3s;
+}
+
+.character-portrait:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+    filter: brightness(1.05);
+}
+
+
+
+.character-portrait-rare4{
+    background-image: linear-gradient(to top, #6f4cb0, #441757);
+    border-radius: 3px;
+}
+
+.character-portrait-rare5{
+    background-image: linear-gradient(to top, #cfb41d, #6a5f3e);
+    border-radius: 3px;
 }
