--- a/trailblazers-react/src/CharacterListDashboard/Filters.css
+++ b/trailblazers-react/src/CharacterListDashboard/Filters.css
@@ -17,6 +17,10 @@ li[data-id="button"]{
     height: 40px;
 }
 
+.imgbutton.active{
+    background-color: rgba(30,29,29);
+}
+
 .imgbutton img{
     width: 100%;
     height: 100%;
