--- a/trailblazers-react/src/CharacterListDashboard/CharacterPageList.css
+++ b/trailblazers-react/src/CharacterListDashboard/CharacterPageList.css
@@ -73,7 +73,7 @@ li[data-id = 'header']{
 }
   
 .popup-container .popup-content {
-    background-color: #fff; /* Background color of the popup */
+    background-color: white; /* Background color of the popup */
     padding: 20px;
     border-radius: 5px;
     max-width: 600px; /* Adjust the width as needed */
@@ -100,7 +100,7 @@ li[data-id = 'header']{
 .popup-container button {
     background-color: #007bff;
     color: #fff;
-    padding: 8px 16px;
+    padding: 8px 50px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
@@ -108,4 +108,7 @@ li[data-id = 'header']{
   
 .popup-container button:hover {
     background-color: #0056b3;
+    transform: scale(1.05);
+    cursor: pointer;
+    filter: brightness(1.05);
 }
