--- a/trailblazers-react/src/CharacterListDashboard/Filters.css
+++ b/trailblazers-react/src/CharacterListDashboard/Filters.css
@@ -30,3 +30,22 @@ li[data-id="button"]{
     background-color: rgba(30,29,29);
     cursor: pointer;
 }
+
+.imgbutton:hover .label{
+    cursor: pointer;
+    opacity: 1;
+}
+
+.label {
+    position: absolute;
+    bottom: 43px; /* Adjust the positioning as per your design */
+    left: 54%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Set the background color for the label */
+    color: white; /* Set the text color for the label */
+    padding: 5px 10px; /* Adjust the padding as per your design */
+    opacity: 0; /* Initially hide the label */
+    transition: opacity 0.3s ease; /* Add a transition effect for smooth visibility */
+    border-radius: 5px;
+    font-weight: 600;
+}
