Add adjustable layout

--- a/trailblazers-react/src/CharacterListDashboard/CharacterList.css
+++ b/trailblazers-react/src/CharacterListDashboard/CharacterList.css
@@ -1,5 +1,6 @@
 
 .character-portrait{
+    margin: 0px 20px 0 20px;
     color: rgb(220, 214, 214);
     font-family: "Open Sans", Arial, sans-serif;
     text-align: center;
