--- a/trailblazers-react/src/CharacterListDashboard/Filters.css
+++ b/trailblazers-react/src/CharacterListDashboard/Filters.css
@@ -4,6 +4,8 @@ li[data-id="button"]{
     position: relative;
     text-align: center;
     padding-left: 5px;
+    flex: 1 0 200px; /* Adjust the width as needed */
+    list-style: none;
 }
 
 
@@ -14,7 +16,7 @@ li[data-id="button"]{
     background-color: transparent;
     border: none;
     width: 50px;
-    height: 40px;
+    height: auto;
 }
 
 .imgbutton.active{
