--- a/trailblazers-react/src/CharacterListDashboard/Dashboard.css
+++ b/trailblazers-react/src/CharacterListDashboard/Dashboard.css
@@ -1,19 +1,21 @@
 .contentDashboard{
     border-radius: 5px;
     background-color: rgba(59, 58, 58, 0.75);
-    position: absolute;
-    top: 25%;
+    position: relative;
+    top: 20%;
     left: 10%;
     width: 80%;
     padding: 0px 10px 100px 10px;
     min-height: 400px;
-    margin-bottom: 20px;
+    margin-bottom: 200px;
 }
 
-
-body{
+.dashboard {
     background-image: url(../../public/CharacterListDashboardImg/background.png);
     background-repeat: no-repeat;
-    background-size: cover; /* makes the image cover the entire background */
-
-}
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    overflow-y: scroll; /* Add scrollable content */
+    height: 100vh; /* Set the height to ensure the content is scrollable */
+  }
