--- a/trailblazers-react/src/CharacterListDashboard/CharacterDetailsPopup.css
+++ b/trailblazers-react/src/CharacterListDashboard/CharacterDetailsPopup.css
@@ -6,8 +6,8 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: rgba(59, 58, 58, 0.75);
+    justify-content: center;    
+    background-color: rgba(215, 206, 206, 0.75);
 }
   
 .character-details-popup .popup-overlay {
@@ -17,7 +17,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(59, 58, 58, 0.75);
-    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,7 +28,7 @@
     padding: 20px;
     max-width: 400px;
     text-align: center;
-    color: rgba(59, 58, 58, 0.75);
+    color: white;
 }
   
 .character-details-popup .popup-content img {
@@ -43,6 +42,7 @@
 .character-details-popup .popup-content h2 {
     font-size: 24px;
     margin-bottom: 10px;
+    color: white;
 }
   
 .character-details-popup .popup-content p {
@@ -61,4 +61,42 @@
   
 .character-details-popup .popup-content button:hover {
     background-color: #45a049;
+}
+
+.character-details-popup .buttons-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+  margin-right: 30px;
+  padding: 10px;
+}
+
+.popup-button-eidolon {
+    padding: 8px 16px;
+    background-color: #4caf50;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.popup-button-traces {
+    padding: 8px 16px;
+    background-color: #4caf50;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.popup-button-skills {
+    padding: 8px 16px;
+    background-color: #4caf50;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
 }
