--- a/trailblazers-react/src/CharacterListDashboard/CharacterDetailsPopup.css
+++ b/trailblazers-react/src/CharacterListDashboard/CharacterDetailsPopup.css
@@ -67,7 +67,7 @@
   display: flex;
   justify-content: space-around;
   margin-top: 10px;
-  margin-right: 30px;
+  margin-right: 12px;
   padding: 10px;
 }
 
@@ -99,4 +99,8 @@
     border-radius: 4px;
     cursor: pointer;
     margin-left: 10px;
+}
+
+.close-button {
+    margin-left: 18px;
 }
