--- a/trailblazers-react/src/components/Navbar/styles.scss
+++ b/trailblazers-react/src/components/Navbar/styles.scss
@@ -1,7 +1,7 @@
 .navbar {
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
