--- a/trailblazers-react/src/components/Modal/BuildModal/BuildUpdateModal/styles.scss
+++ b/trailblazers-react/src/components/Modal/BuildModal/BuildUpdateModal/styles.scss
@@ -1,6 +1,6 @@
 @import "../../../../styles/variables.scss";
 
-.modalBackground {
+.build-modalBackground {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
@@ -13,52 +13,47 @@
   align-items: center;
 }
 
-.modalContainer {
+.build-modalContainer {
   width: 40%;
   height: 80%;
   border-radius: 12px;
   background-color: $gray-200;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   padding: 25px;
   overflow: auto;
 }
 
-.modalContainer .title {
-  display: inline-block;
-  text-align: center;
+.build-modalContainer .build-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modalText {
-  font-weight: bold;
-  font-size: x-large;
-  margin-bottom: 20px;
-}
-
-.modalImage {
+.build-modalImage {
   border-radius: 5px;
   border-width: 2px;
   border-color: black;
   border-style: solid;
-  &.rarity5 {
+
+  &.build-rarity5 {
     background-image: url(https://rerollcdn.com/STARRAIL/Rarity/5_sm.png) !important;
     background-position: 50% !important;
     background-size: contain !important;
   }
 
-  &.rarity4 {
+  &.build-rarity4 {
     background-image: url(https://rerollcdn.com/STARRAIL/Rarity/4_sm.png) !important;
     background-position: 50% !important;
     background-size: contain !important;
   }
 }
 
-.titleCloseBtn {
+.build-titleCloseBtn {
   display: fixed;
 }
 
-.titleCloseBtn button {
+.build-titleCloseBtn button {
   background-color: transparent;
   border: none;
   font-size: 25px;
@@ -67,13 +62,13 @@
   color: white;
 }
 
-.titleCloseBtn img {
+.build-titleCloseBtn img {
   background-color: transparent;
   border: none;
   height: 25px;
 }
 
-.modalContainer .body {
+.build-modalContainer .build-body {
   margin-top: 20px;
   flex: 50%;
   display: flex;
@@ -82,14 +77,14 @@
   text-align: center;
 }
 
-.modalContainer .footer {
+.build-modalContainer .build-modal-footer {
   flex: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.modalContainer .footer button {
+.build-modalContainer .build-modal-footer button {
   width: 150px;
   height: 45px;
   margin: 10px;
@@ -101,14 +96,28 @@
   cursor: pointer;
 }
 
-.like-button {
-  background-color: cornflowerblue !important;
+.build-like-button {
+  background-color: crimson;
 }
 
-.liked-button {
-  background-color: crimson !important; /* Change the color to your desired color for the liked state */
+.build-error {
+  text-align: center;
+  margin-top: -5%;
 }
 
-.delete-button {
-  background-color: crimson !important;
+.build-text {
+  margin-top: 10px;
+}
+.build-select {
+  text-align: center;
+  width: 100%; /* Set the width to 100% for consistent size */
+}
+
+.build-input {
+  font-family: "DIN";
+  text-align: center;
+  height: 2.5rem;
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
 }
