--- a/trailblazers-react/src/components/Modal/BuildModal/BuildCreateModal/styles.scss
+++ b/trailblazers-react/src/components/Modal/BuildModal/BuildCreateModal/styles.scss
@@ -107,10 +107,12 @@
 
 .build-text {
   margin-top: 10px;
+  font-family: "DIN";
 }
 .build-select {
   text-align: center;
   width: 100%; /* Set the width to 100% for consistent size */
+  font-family: "DIN";
 }
 
 .build-input {
