--- a/trailblazers-react/src/components/Modal/BuildModal/BuildUpdateModal/styles.scss
+++ b/trailblazers-react/src/components/Modal/BuildModal/BuildUpdateModal/styles.scss
@@ -109,7 +109,7 @@
   margin-top: 10px;
 }
 .build-select {
-  text-align: center;
+  text-align: center !important;
   width: 100%; /* Set the width to 100% for consistent size */
 }
 
