Add admin buttons

--- a/trailblazers-react/src/screens/user/Dashboard/styles.module.scss
+++ b/trailblazers-react/src/screens/user/Dashboard/styles.module.scss
@@ -48,6 +48,12 @@
       border-radius: 5px;
       border-width: 2px;
     }
+
+    &_admin {
+      float: right;
+      background-color: $blue-400;
+      border-radius: 5px;
+    }
   }
 
   &_display_grid {
