--- a/trailblazers-react/src/components/Modal/RelicModal/RelicCreateModal/styles.scss
+++ b/trailblazers-react/src/components/Modal/RelicModal/RelicCreateModal/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import "../../../../styles/variables.scss";
 
 .build-modalBackground {
   width: 100%;
@@ -109,6 +109,7 @@
   margin-top: 10px;
   font-family: "DIN";
 }
+
 .build-select {
   text-align: center;
   width: 100%; /* Set the width to 100% for consistent size */
@@ -119,6 +120,15 @@
   font-family: "DIN";
   text-align: center;
   height: 2.5rem;
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.build-input-description {
+  font-family: "DIN";
+  text-align: center;
+  height: 5rem;
   width: 100%;
   border-radius: 5px;
   text-align: center;
